made EGN mandatorry and UID

--- a/templates/player_form.html
+++ b/templates/player_form.html
@@ -200,7 +200,7 @@
     <div class="col-auto">
       <button class="btn btn-outline-primary" type="submit">{{ _('Import CSV') }}</button>
     </div>
-    <div class="col-12 form-text">{{ _('CSV should include headers: first_name,last_name,email,phone,gender,birthdate,join_date,pn,grade_level,monthly_fee_amount') }}</div>
+    <div class="col-12 form-text">{{ _('CSV should include headers: first_name,last_name,email,phone,gender,birthdate,join_date,pn (required),grade_level,monthly_fee_amount') }}</div>
   </form>
 </div>
 {% endif %}
