--- a/templates/event_list.html
+++ b/templates/event_list.html
@@ -2,27 +2,20 @@
 {% block content %}
 <div class="d-flex justify-content-between align-items-center mb-3">
   <h1 class="mb-0">{{ _('Events') }}</h1>
-  {% if session.get('is_admin') %}
-    <a class="btn btn-primary" href="{{ url_for('event_new') }}">{{ _('New Event') }}</a>
-    <button id="importEventZipBtn" type="button" class="btn btn-outline-secondary ms-2" data-bs-toggle="modal" data-bs-target="#importEventZipModal">{{ _('Import Event (ZIP)') }}</button>
-  {% endif %}
-  <a class="btn btn-secondary ms-2" href="{{ request.referrer or url_for('events_calendar') }}">{{ _('Back') }}</a>
+  <div class="d-flex align-items-center gap-2 flex-wrap">
+    <form class="d-flex gap-2 align-items-center" method="get" style="min-width:320px;">
+      <input type="text" class="form-control" name="q" value="{{ q }}" placeholder="{{ _('Search') }}" style="min-width:180px;">
+      <input type="number" class="form-control" name="year" value="{{ year or '' }}" min="2000" max="2100" style="width:100px;">
+      <button class="btn btn-primary" type="submit">{{ _('Apply') }}</button>
+      <a class="btn btn-outline-secondary" href="{{ url_for('event_list') }}">{{ _('Reset') }}</a>
+    </form>
+    {% if session.get('is_admin') %}
+      <a class="btn btn-primary" href="{{ url_for('event_new') }}">{{ _('New Event') }}</a>
+      <button id="importEventZipBtn" type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#importEventZipModal">{{ _('Import Event (ZIP)') }}</button>
+    {% endif %}
+    <a class="btn btn-secondary" href="{{ request.referrer or url_for('events_calendar') }}">{{ _('Back') }}</a>
+  </div>
 </div>
-
-<form class="row row-cols-lg-auto g-3 align-items-end mb-4" method="get">
-  <div class="col-12">
-    <label class="form-label">{{ _('Search') }}</label>
-    <input type="text" class="form-control" name="q" value="{{ q }}" placeholder="{{ _('Event') }}">
-  </div>
-  <div class="col-12">
-    <label class="form-label">{{ _('Year') }}</label>
-    <input type="number" class="form-control" name="year" value="{{ year or '' }}" min="2000" max="2100">
-  </div>
-  <div class="col-12">
-    <button class="btn btn-primary" type="submit">{{ _('Apply') }}</button>
-    <a class="btn btn-outline-secondary" href="{{ url_for('event_list') }}">{{ _('Reset') }}</a>
-  </div>
-</form>
 
 <div class="table-responsive">
   <table class="table table-striped align-middle">
