--- a/templates/admin_exports.html
+++ b/templates/admin_exports.html
@@ -15,6 +15,10 @@
 
     <hr />
     <p class="small text-muted mt-3">{{ _('Per-event exports are available from the event detail page.') }}</p>
+    
+    <div class="mt-4">
+      <a class="btn btn-secondary" href="{{ request.referrer or url_for('list_players') }}">{{ _('Back') }}</a>
+    </div>
   </div>
 </div>
 {% endblock %}
